// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OListbox tests > render correctly with items 1`] = `
"<div data-oruga="listbox" class="o-listbox o-listbox--selectable">
  <!--v-if-->
  <!--v-if-->
  <ul id="v-0_list" role="listbox" tabindex="0" class="o-listbox__list" style="max-height: 225px; overflow: auto;" aria-disabled="false">
    <transition-group-stub name="fade" appear="false" persisted="false" css="true">
      <li id="v-0-1" data-oruga="listbox-item" data-id="listbox-1" class="o-listbox__item o-listbox__item--clickable" role="option" tabindex="-1" aria-selected="false" aria-hidden="false" aria-disabled="false">New York</li>
      <li id="v-0-2" data-oruga="listbox-item" data-id="listbox-2" class="o-listbox__item o-listbox__item--clickable" role="option" tabindex="-1" aria-selected="false" aria-hidden="false" aria-disabled="false">Rome</li>
      <li id="v-0-3" data-oruga="listbox-item" data-id="listbox-3" class="o-listbox__item o-listbox__item--clickable" role="option" tabindex="-1" aria-selected="false" aria-hidden="false" aria-disabled="false">London</li>
      <li id="v-0-4" data-oruga="listbox-item" data-id="listbox-4" class="o-listbox__item o-listbox__item--clickable" role="option" tabindex="-1" aria-selected="false" aria-hidden="false" aria-disabled="false">Istanbul</li>
      <li id="v-0-5" data-oruga="listbox-item" data-id="listbox-5" class="o-listbox__item o-listbox__item--clickable" role="option" tabindex="-1" aria-selected="false" aria-hidden="false" aria-disabled="false">Paris</li>
    </transition-group-stub>
  </ul>
  <transition-stub name="fade" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
</div>"
`;

exports[`OListbox tests > render correctly with options 1`] = `
"<div data-oruga="listbox" class="o-listbox o-listbox--selectable">
  <!--v-if-->
  <!--v-if-->
  <ul id="v-0_list" role="listbox" tabindex="0" class="o-listbox__list" style="max-height: 225px; overflow: auto;" aria-disabled="false">
    <transition-group-stub name="fade" appear="false" persisted="false" css="true">
      <!--v-if-->
      <li id="v-0-1" data-oruga="listbox-item" data-id="listbox-1" class="o-listbox__item o-listbox__item--clickable" role="option" tabindex="-1" aria-selected="false" aria-hidden="false" aria-disabled="false" aria-label="New York" aria-setsize="5" aria-posinset="1"><span>New York</span></li>
      <li id="v-0-2" data-oruga="listbox-item" data-id="listbox-2" class="o-listbox__item o-listbox__item--clickable" role="option" tabindex="-1" aria-selected="false" aria-hidden="false" aria-disabled="false" aria-label="Rome" aria-setsize="5" aria-posinset="2"><span>Rome</span></li>
      <li id="v-0-3" data-oruga="listbox-item" data-id="listbox-3" class="o-listbox__item o-listbox__item--clickable" role="option" tabindex="-1" aria-selected="false" aria-hidden="false" aria-disabled="false" aria-label="London" aria-setsize="5" aria-posinset="3"><span>London</span></li>
      <li id="v-0-4" data-oruga="listbox-item" data-id="listbox-4" class="o-listbox__item o-listbox__item--clickable" role="option" tabindex="-1" aria-selected="false" aria-hidden="false" aria-disabled="false" aria-label="Istanbul" aria-setsize="5" aria-posinset="4"><span>Istanbul</span></li>
      <li id="v-0-5" data-oruga="listbox-item" data-id="listbox-5" class="o-listbox__item o-listbox__item--clickable" role="option" tabindex="-1" aria-selected="false" aria-hidden="false" aria-disabled="false" aria-label="Paris" aria-setsize="5" aria-posinset="5"><span>Paris</span></li>
    </transition-group-stub>
  </ul>
  <transition-stub name="fade" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
</div>"
`;
